--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,21 +29,24 @@ jobs:
           name: Install API Dependencies
           command: |
            echo "TODO: Install dependencies in the the backend API  "
+           npm run api:install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
+            npm run frontend:lint
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
+            npm run frontend:build
       # TODO: Build the backend API      
       - run:
           name: API Build
           command: |
             echo "TODO: Build the backend API"
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -60,6 +63,12 @@ jobs:
           # TODO: Install, build, deploy in both apps
           command: |
             echo "# TODO: Install, build, deploy in both apps"
+            npm run frontend:install
+            npm run frontend:build
+            npm run frontend:deploy
+            npm run api:install
+            npm run api:build
+            npm run api:deploy
             
 workflows:
   udagram:
