--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,12 +63,7 @@ jobs:
           # TODO: Install, build, deploy in both apps
           command: |
             echo "# TODO: Install, build, deploy in both apps"
-            npm run frontend:install
-            npm run frontend:build
-            npm run frontend:deploy
-            npm run api:install
-            npm run api:build
-            npm run api:deploy
+            npm run deploy
             
 workflows:
   udagram:
